--- a/package.json
+++ b/package.json
@@ -5,25 +5,42 @@
   "author": "chige12",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "processmd contents/posts/*.md --stdout --outputDir contents/json > contents/summary.json && nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
+    "generate": "processmd contents/posts/*.md --stdout --outputDir contents/json > contents/summary.json && nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@nuxtjs/markdownit": "^1.2.9",
+    "firebase": "^7.14.3",
+    "lodash": "^4.17.15",
+    "nuxt": "^2.0.0",
+    "nuxt-webfontloader": "^1.1.0",
+    "ress": "^2.0.4",
+    "vue-meta": "^2.3.3",
+    "vue-scrollto": "^2.18.1",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
+    "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/vuetify": "^1.0.0",
+    "autoprefixer": "^9.7.6",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
     "json-schema": "^0.2.5",
-    "prettier": "^1.19.1"
+    "node-sass": "^4.14.1",
+    "prettier": "^1.19.1",
+    "processmd": "^4.5.0",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
+    "sass-loader": "^8.0.2"
   }
 }
